# predictive_maintenance_use_cases

./: README.md  config.json  prep_dataset.py  pyproject.toml
html/: WT01_logs.html  WT02_logs.html  WT03_logs.html  WT04_logs.html  WT05_logs.html  WT06_logs.html  WT07_logs.html  WT08_logs.html  WT09_logs.html  WT10_logs.html  WTG_logs_profile_01.html  WTG_logs_profile_02.html  WTG_logs_profile_03.html  WTG_logs_profile_04.html  WTG_logs_profile_05.html  WTG_logs_profile_06.html  WTG_logs_profile_07.html  WTG_logs_profile_08.html  WTG_logs_profile_09.html  WTG_logs_profile_10.html  WTG_scada_outliers_profile_01.html  WTG_scada_outliers_profile_02.html  WTG_scada_outliers_profile_03.html  WTG_scada_outliers_profile_04.html  WTG_scada_outliers_profile_05.html  WTG_scada_outliers_profile_06.html  WTG_scada_outliers_profile_07.html  WTG_scada_outliers_profile_08.html  WTG_scada_outliers_profile_09.html  WTG_scada_outliers_profile_10.html
