[project]
name = "scada_dataset"
version = "1.0"
description = "The Wind Turbine SCADA Event Log Dataset"
authors = [
    { name="Axel Weissenfeld", email="axel.weissenfeld@ait.ac.at" }
]
requires-python = ">=3.12"

dependencies = [
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dacite==1.9.2",
    "et_xmlfile==2.0.0",
    "fonttools==4.57.0",
    "htmlmin==0.1.12",
    "idna==3.10",
    "ImageHash==4.3.1",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.0",
    "multimethod==1.12",
    "networkx==3.4.2",
    "numba==0.61.0",
    "numpy==2.1.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "patsy==1.0.1",
    "phik==0.12.4",
    "pillow==11.2.1",
    "puremagic==1.29",
    "pydantic==2.11.4",
    "pydantic_core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyWavelets==1.8.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools==80.3.0",
    "six==1.17.0",
    "statsmodels==0.14.4",
    "tqdm==4.67.1",
    "typeguard==4.4.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "visions==0.8.1",
    "wordcloud==1.9.4",
    "ydata-profiling==4.16.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
